completed practice question

--- a/Pandas_Data_Analyst's_BF.ipynb
+++ b/Pandas_Data_Analyst's_BF.ipynb
@@ -1289,10 +1289,22 @@
    "execution_count": null,
    "id": "1151c347",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Embarked\n",
+      "Q     77\n",
+      "C    168\n",
+      "S    644\n",
+      "Name: count, dtype: int64\n"
+     ]
+    }
+   ],
    "source": [
     "# 2. Use .value_counts() to see counts for embarkation ports\n",
-    "print()\n"
+    "print(df['Embarked'].value_counts())\n"
    ]
   },
   {
@@ -1300,63 +1312,133 @@
    "execution_count": null,
    "id": "7be1e3ea",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pclass\n",
+      "2    184\n",
+      "1    216\n",
+      "3    491\n",
+      "Name: count, dtype: int64\n"
+     ]
+    }
+   ],
    "source": [
     "# 3. Use .value_counts() to count passenger classes\n",
-    "print()\n"
+    "print(df['Pclass'].value_counts())\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "id": "cc8e928c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "29.69911764705882\n"
+     ]
+    }
+   ],
    "source": [
     "# 4. Show the average (mean) age of passengers\n",
-    "print()\n"
+    "print(df['Age'].mean() )\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "id": "a6778bb5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "512.3292\n"
+     ]
+    }
+   ],
    "source": [
     "# 5. Show the maximum fare paid\n",
-    "print()\n"
+    "print(df['Fare'].max())\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "id": "26f7aae0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "891\n"
+     ]
+    }
+   ],
    "source": [
     "# 6. Show how many unique names are in the dataset\n",
-    "print()\n"
+    "print(df['Name'].nunique())\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "id": "05c414e9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sex\n",
+      "male      577\n",
+      "female    314\n",
+      "Name: count, dtype: int64\n"
+     ]
+    }
+   ],
    "source": [
     "# 7. Show counts for values in the 'Sex' column\n",
-    "print()"
+    "print(df['Sex'].value_counts())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "id": "019e3c2b",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "PassengerId    891\n",
+      "Survived         2\n",
+      "Pclass           3\n",
+      "Name           891\n",
+      "Sex              2\n",
+      "Age             88\n",
+      "SibSp            7\n",
+      "Parch            7\n",
+      "Ticket         681\n",
+      "Fare           248\n",
+      "Cabin          147\n",
+      "Embarked         3\n",
+      "dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 8. Show how many unique values are in each column\n",
+    "print(df.nunique())"
+   ]
   },
   {
    "cell_type": "code",
