last bit of the video

--- a/Week_1/Pandas_Function_Apply_vs_Map_vs_Applymap.ipynb
+++ b/Week_1/Pandas_Function_Apply_vs_Map_vs_Applymap.ipynb
@@ -3130,43 +3130,639 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "81884f1c",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "index",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "0",
+         "rawType": "object",
+         "type": "string"
+        }
+       ],
+       "ref": "75014639-8439-4e13-9ae6-2c29e0ec74a5",
+       "rows": [
+        [
+         "0",
+         "cat"
+        ],
+        [
+         "1",
+         "dog"
+        ],
+        [
+         "2",
+         "Nan"
+        ],
+        [
+         "3",
+         "rabbit"
+        ]
+       ],
+       "shape": {
+        "columns": 1,
+        "rows": 4
+       }
+      },
+      "text/plain": [
+       "0       cat\n",
+       "1       dog\n",
+       "2       Nan\n",
+       "3    rabbit\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s = pd.Series(['cat', 'dog', 'Nan', 'rabbit'])\n",
+    "s\n"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "e02ada41",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "index",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "0",
+         "rawType": "object",
+         "type": "unknown"
+        }
+       ],
+       "ref": "5ac0544f-fc14-4153-b143-470137173a1a",
+       "rows": [
+        [
+         "0",
+         "kitten"
+        ],
+        [
+         "1",
+         "puppy"
+        ],
+        [
+         "2",
+         null
+        ],
+        [
+         "3",
+         null
+        ]
+       ],
+       "shape": {
+        "columns": 1,
+        "rows": 4
+       }
+      },
+      "text/plain": [
+       "0    kitten\n",
+       "1     puppy\n",
+       "2       NaN\n",
+       "3       NaN\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s.map({'cat': 'kitten', 'dog':'puppy'})\n",
+    "\n",
+    "#why does this over ride rabbit? "
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "4d554fc2",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "index",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "Agency",
+         "rawType": "object",
+         "type": "string"
+        }
+       ],
+       "ref": "9255e18d-8fb7-421f-b4da-67bf243202eb",
+       "rows": [
+        [
+         "0",
+         "kitten OF HEALTH/MENTAL HYGIENE"
+        ],
+        [
+         "1",
+         "NYC EMPLOYEES RETIREMENT SYS"
+        ],
+        [
+         "2",
+         "NYC HOUSING AUTHORITY"
+        ],
+        [
+         "3",
+         "NYC EMPLOYEES RETIREMENT SYS"
+        ],
+        [
+         "4",
+         "HUMAN RIGHTS COMMISSION"
+        ],
+        [
+         "5",
+         "DEPARTMENT OF BUILDINGS"
+        ],
+        [
+         "6",
+         "DEPARTMENT OF CORRECTION"
+        ],
+        [
+         "7",
+         "kitten OF PARKS & RECREATION"
+        ],
+        [
+         "8",
+         "HOUSING PRESERVATION & DVLPMNT"
+        ],
+        [
+         "9",
+         "MAYORS OFFICE OF CONTRACT SVCS"
+        ],
+        [
+         "10",
+         "kitten OF PARKS & RECREATION"
+        ],
+        [
+         "11",
+         "kitten OF ENVIRONMENT PROTECTION"
+        ],
+        [
+         "12",
+         "HUMAN RIGHTS COMMISSION"
+        ],
+        [
+         "13",
+         "DEPARTMENT OF TRANSPORTATION"
+        ],
+        [
+         "14",
+         "kitten OF ENVIRONMENT PROTECTION"
+        ],
+        [
+         "15",
+         "kitten OF ENVIRONMENT PROTECTION"
+        ],
+        [
+         "16",
+         "TAXI & LIMOUSINE COMMISSION"
+        ],
+        [
+         "17",
+         "CONSUMER AND WORKER PROTECTION"
+        ],
+        [
+         "18",
+         "DEPARTMENT OF TRANSPORTATION"
+        ],
+        [
+         "19",
+         "HOUSING PRESERVATION & DVLPMNT"
+        ],
+        [
+         "20",
+         "kitten OF ENVIRONMENT PROTECTION"
+        ],
+        [
+         "21",
+         "kitten OF YOUTH & COMM DEV SRVS"
+        ],
+        [
+         "22",
+         "DEPARTMENT OF TRANSPORTATION"
+        ],
+        [
+         "23",
+         "kitten OF ENVIRONMENT PROTECTION"
+        ],
+        [
+         "24",
+         "DEPARTMENT OF BUILDINGS"
+        ],
+        [
+         "25",
+         "CONSUMER AND WORKER PROTECTION"
+        ],
+        [
+         "26",
+         "kitten OF HEALTH/MENTAL HYGIENE"
+        ],
+        [
+         "27",
+         "kitten OF INFO TECH & TELECOMM"
+        ],
+        [
+         "28",
+         "HUMAN RIGHTS COMMISSION"
+        ],
+        [
+         "29",
+         "kitten OF DESIGN & CONSTRUCTION"
+        ],
+        [
+         "30",
+         "PUBLIC ADMINISTRATOR-NEW YORK"
+        ],
+        [
+         "31",
+         "DEPARTMENT OF INVESTIGATION"
+        ],
+        [
+         "32",
+         "DEPARTMENT OF BUILDINGS"
+        ],
+        [
+         "33",
+         "DEPARTMENT OF BUILDINGS"
+        ],
+        [
+         "34",
+         "DEPARTMENT OF TRANSPORTATION"
+        ],
+        [
+         "35",
+         "kitten OF YOUTH & COMM DEV SRVS"
+        ],
+        [
+         "36",
+         "HOUSING PRESERVATION & DVLPMNT"
+        ],
+        [
+         "37",
+         "kitten OF DESIGN & CONSTRUCTION"
+        ],
+        [
+         "38",
+         "DEPARTMENT OF BUILDINGS"
+        ],
+        [
+         "39",
+         "CIVILIAN COMPLAINT REVIEW BD"
+        ],
+        [
+         "40",
+         "kitten OF ENVIRONMENT PROTECTION"
+        ],
+        [
+         "41",
+         "DEPARTMENT OF TRANSPORTATION"
+        ],
+        [
+         "42",
+         "NYC HOUSING AUTHORITY"
+        ],
+        [
+         "43",
+         "CONSUMER AND WORKER PROTECTION"
+        ],
+        [
+         "44",
+         "POLICE DEPARTMENT"
+        ],
+        [
+         "45",
+         "kitten OF HEALTH/MENTAL HYGIENE"
+        ],
+        [
+         "46",
+         "NYC HOUSING AUTHORITY"
+        ],
+        [
+         "47",
+         "NYC HOUSING AUTHORITY"
+        ],
+        [
+         "48",
+         "OFFICE OF THE COMPTROLLER"
+        ],
+        [
+         "49",
+         "DEPARTMENT OF CORRECTION"
+        ]
+       ],
+       "shape": {
+        "columns": 1,
+        "rows": 3773
+       }
+      },
+      "text/plain": [
+       "0       kitten OF HEALTH/MENTAL HYGIENE\n",
+       "1          NYC EMPLOYEES RETIREMENT SYS\n",
+       "2                 NYC HOUSING AUTHORITY\n",
+       "3          NYC EMPLOYEES RETIREMENT SYS\n",
+       "4               HUMAN RIGHTS COMMISSION\n",
+       "                     ...               \n",
+       "3768       NYC EMPLOYEES RETIREMENT SYS\n",
+       "3769     HOUSING PRESERVATION & DVLPMNT\n",
+       "3770         FINANCIAL INFO SVCS AGENCY\n",
+       "3771    kitten OF HEALTH/MENTAL HYGIENE\n",
+       "3772            HUMAN RIGHTS COMMISSION\n",
+       "Name: Agency, Length: 3773, dtype: object"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def change_word(title):\n",
+    "    return title.replace('DEPT', 'kitten')\n",
+    "\n",
+    "data['Agency'].map(change_word)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "0f6c64ba",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "cdfceca0",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "index",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "Agency",
+         "rawType": "object",
+         "type": "string"
+        }
+       ],
+       "ref": "a8f9ca69-0930-4dda-8592-556eb74d1c72",
+       "rows": [
+        [
+         "0",
+         "This position is offered by DEPT OF HEALTH/MENTAL HYGIENE"
+        ],
+        [
+         "1",
+         "This position is offered by NYC EMPLOYEES RETIREMENT SYS"
+        ],
+        [
+         "2",
+         "This position is offered by NYC HOUSING AUTHORITY"
+        ],
+        [
+         "3",
+         "This position is offered by NYC EMPLOYEES RETIREMENT SYS"
+        ],
+        [
+         "4",
+         "This position is offered by HUMAN RIGHTS COMMISSION"
+        ],
+        [
+         "5",
+         "This position is offered by DEPARTMENT OF BUILDINGS"
+        ],
+        [
+         "6",
+         "This position is offered by DEPARTMENT OF CORRECTION"
+        ],
+        [
+         "7",
+         "This position is offered by DEPT OF PARKS & RECREATION"
+        ],
+        [
+         "8",
+         "This position is offered by HOUSING PRESERVATION & DVLPMNT"
+        ],
+        [
+         "9",
+         "This position is offered by MAYORS OFFICE OF CONTRACT SVCS"
+        ],
+        [
+         "10",
+         "This position is offered by DEPT OF PARKS & RECREATION"
+        ],
+        [
+         "11",
+         "This position is offered by DEPT OF ENVIRONMENT PROTECTION"
+        ],
+        [
+         "12",
+         "This position is offered by HUMAN RIGHTS COMMISSION"
+        ],
+        [
+         "13",
+         "This position is offered by DEPARTMENT OF TRANSPORTATION"
+        ],
+        [
+         "14",
+         "This position is offered by DEPT OF ENVIRONMENT PROTECTION"
+        ],
+        [
+         "15",
+         "This position is offered by DEPT OF ENVIRONMENT PROTECTION"
+        ],
+        [
+         "16",
+         "This position is offered by TAXI & LIMOUSINE COMMISSION"
+        ],
+        [
+         "17",
+         "This position is offered by CONSUMER AND WORKER PROTECTION"
+        ],
+        [
+         "18",
+         "This position is offered by DEPARTMENT OF TRANSPORTATION"
+        ],
+        [
+         "19",
+         "This position is offered by HOUSING PRESERVATION & DVLPMNT"
+        ],
+        [
+         "20",
+         "This position is offered by DEPT OF ENVIRONMENT PROTECTION"
+        ],
+        [
+         "21",
+         "This position is offered by DEPT OF YOUTH & COMM DEV SRVS"
+        ],
+        [
+         "22",
+         "This position is offered by DEPARTMENT OF TRANSPORTATION"
+        ],
+        [
+         "23",
+         "This position is offered by DEPT OF ENVIRONMENT PROTECTION"
+        ],
+        [
+         "24",
+         "This position is offered by DEPARTMENT OF BUILDINGS"
+        ],
+        [
+         "25",
+         "This position is offered by CONSUMER AND WORKER PROTECTION"
+        ],
+        [
+         "26",
+         "This position is offered by DEPT OF HEALTH/MENTAL HYGIENE"
+        ],
+        [
+         "27",
+         "This position is offered by DEPT OF INFO TECH & TELECOMM"
+        ],
+        [
+         "28",
+         "This position is offered by HUMAN RIGHTS COMMISSION"
+        ],
+        [
+         "29",
+         "This position is offered by DEPT OF DESIGN & CONSTRUCTION"
+        ],
+        [
+         "30",
+         "This position is offered by PUBLIC ADMINISTRATOR-NEW YORK"
+        ],
+        [
+         "31",
+         "This position is offered by DEPARTMENT OF INVESTIGATION"
+        ],
+        [
+         "32",
+         "This position is offered by DEPARTMENT OF BUILDINGS"
+        ],
+        [
+         "33",
+         "This position is offered by DEPARTMENT OF BUILDINGS"
+        ],
+        [
+         "34",
+         "This position is offered by DEPARTMENT OF TRANSPORTATION"
+        ],
+        [
+         "35",
+         "This position is offered by DEPT OF YOUTH & COMM DEV SRVS"
+        ],
+        [
+         "36",
+         "This position is offered by HOUSING PRESERVATION & DVLPMNT"
+        ],
+        [
+         "37",
+         "This position is offered by DEPT OF DESIGN & CONSTRUCTION"
+        ],
+        [
+         "38",
+         "This position is offered by DEPARTMENT OF BUILDINGS"
+        ],
+        [
+         "39",
+         "This position is offered by CIVILIAN COMPLAINT REVIEW BD"
+        ],
+        [
+         "40",
+         "This position is offered by DEPT OF ENVIRONMENT PROTECTION"
+        ],
+        [
+         "41",
+         "This position is offered by DEPARTMENT OF TRANSPORTATION"
+        ],
+        [
+         "42",
+         "This position is offered by NYC HOUSING AUTHORITY"
+        ],
+        [
+         "43",
+         "This position is offered by CONSUMER AND WORKER PROTECTION"
+        ],
+        [
+         "44",
+         "This position is offered by POLICE DEPARTMENT"
+        ],
+        [
+         "45",
+         "This position is offered by DEPT OF HEALTH/MENTAL HYGIENE"
+        ],
+        [
+         "46",
+         "This position is offered by NYC HOUSING AUTHORITY"
+        ],
+        [
+         "47",
+         "This position is offered by NYC HOUSING AUTHORITY"
+        ],
+        [
+         "48",
+         "This position is offered by OFFICE OF THE COMPTROLLER"
+        ],
+        [
+         "49",
+         "This position is offered by DEPARTMENT OF CORRECTION"
+        ]
+       ],
+       "shape": {
+        "columns": 1,
+        "rows": 3773
+       }
+      },
+      "text/plain": [
+       "0       This position is offered by DEPT OF HEALTH/MEN...\n",
+       "1       This position is offered by NYC EMPLOYEES RETI...\n",
+       "2       This position is offered by NYC HOUSING AUTHORITY\n",
+       "3       This position is offered by NYC EMPLOYEES RETI...\n",
+       "4       This position is offered by HUMAN RIGHTS COMMI...\n",
+       "                              ...                        \n",
+       "3768    This position is offered by NYC EMPLOYEES RETI...\n",
+       "3769    This position is offered by HOUSING PRESERVATI...\n",
+       "3770    This position is offered by FINANCIAL INFO SVC...\n",
+       "3771    This position is offered by DEPT OF HEALTH/MEN...\n",
+       "3772    This position is offered by HUMAN RIGHTS COMMI...\n",
+       "Name: Agency, Length: 3773, dtype: object"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data['Agency'].map('This position is offered by {}'.format)"
+   ]
   }
  ],
  "metadata": {
