adding cleaning data

--- a/Pandas_Data_Analyst's_BF.ipynb
+++ b/Pandas_Data_Analyst's_BF.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 77,
    "id": "9caf6b09",
    "metadata": {},
    "outputs": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 78,
    "id": "9b7b6a4f",
    "metadata": {},
    "outputs": [
@@ -56,7 +56,7 @@
        "(3, 2)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 79,
    "id": "7ca1861b",
    "metadata": {},
    "outputs": [
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 80,
    "id": "3e1b878e",
    "metadata": {},
    "outputs": [
@@ -154,7 +154,7 @@
          "type": "integer"
         }
        ],
-       "ref": "af2674cb-7fc1-4000-b66d-3c062d2bf9cb",
+       "ref": "19931da3-32e3-4488-9d32-bb7dc027e2f8",
        "rows": [
         [
          "0",
@@ -191,7 +191,7 @@
        "Name: Age, dtype: int64"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 81,
    "id": "64626295",
    "metadata": {},
    "outputs": [
@@ -227,7 +227,7 @@
          "type": "integer"
         }
        ],
-       "ref": "d21352f1-c452-4b69-bee7-576b79874dc6",
+       "ref": "004e35da-bc05-4138-8895-55dcbdf8ebe2",
        "rows": [
         [
          "0",
@@ -322,7 +322,7 @@
        "4   Evelyn   41"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -333,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 82,
    "id": "54b9baf0",
    "metadata": {},
    "outputs": [
@@ -367,7 +367,7 @@
          "type": "integer"
         }
        ],
-       "ref": "c4e1a38e-1c0a-4530-bd85-525b19d3f653",
+       "ref": "df56bbec-3c08-45a7-9ecb-390d9224b053",
        "rows": [
         [
          "1",
@@ -439,7 +439,7 @@
        "4  Evelyn   41  Engineering   80000"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -460,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 59,
    "id": "ea07e171",
    "metadata": {},
    "outputs": [
@@ -484,7 +484,7 @@
          "type": "integer"
         }
        ],
-       "ref": "ae093350-aa26-4b6a-b474-9503f335e810",
+       "ref": "8af385bd-f8a0-471b-a776-aafe822adc4b",
        "rows": [
         [
          "0",
@@ -557,7 +557,7 @@
        "2  Charlie   37"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -570,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 60,
    "id": "c50cecbf",
    "metadata": {},
    "outputs": [
@@ -594,7 +594,7 @@
          "type": "integer"
         }
        ],
-       "ref": "da248427-43ae-4745-8423-89c5b222a206",
+       "ref": "c0e1d47e-5bbe-459e-9665-4d2d898f6655",
        "rows": [
         [
          "0",
@@ -667,7 +667,7 @@
        "2  Charlie   37"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -680,7 +680,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 61,
    "id": "8c3211ed",
    "metadata": {},
    "outputs": [
@@ -690,7 +690,7 @@
        "'Charlie'"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -711,7 +711,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 83,
    "id": "3c19ae34",
    "metadata": {},
    "outputs": [
@@ -837,7 +837,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 84,
    "id": "eddd7e6e",
    "metadata": {},
    "outputs": [
@@ -886,7 +886,7 @@
          "type": "float"
         }
        ],
-       "ref": "6292a42a-b130-4d9a-8571-ad10a2fe76f1",
+       "ref": "ec00c9db-cd26-48fd-af3c-8bfbc337da66",
        "rows": [
         [
          "count",
@@ -1109,7 +1109,7 @@
        "max      6.000000  512.329200  "
       ]
      },
-     "execution_count": 37,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1121,7 +1121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 85,
    "id": "d20e4591",
    "metadata": {},
    "outputs": [
@@ -1140,7 +1140,7 @@
          "type": "integer"
         }
        ],
-       "ref": "f2e4c95f-16de-4361-80b2-e3edc221dc05",
+       "ref": "29a0b9a1-b224-44fa-a577-45738e4da5ed",
        "rows": [
         [
          "3",
@@ -1168,7 +1168,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1181,7 +1181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 86,
    "id": "46539d15",
    "metadata": {},
    "outputs": [
@@ -1200,7 +1200,7 @@
          "type": "integer"
         }
        ],
-       "ref": "61a59309-3195-4aaf-9062-594e4829b4d1",
+       "ref": "a429d883-54e1-44a8-a48d-ffeca2e76519",
        "rows": [
         [
          "Q",
@@ -1228,7 +1228,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1239,7 +1239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 87,
    "id": "405ff648",
    "metadata": {},
    "outputs": [
@@ -1249,7 +1249,7 @@
        "3"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1265,10 +1265,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 88,
    "id": "2cd626af",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "       PassengerId    Survived      Pclass         Age       SibSp  \\\n",
+      "count   891.000000  891.000000  891.000000  714.000000  891.000000   \n",
+      "mean    446.000000    0.383838    2.308642   29.699118    0.523008   \n",
+      "std     257.353842    0.486592    0.836071   14.526497    1.102743   \n",
+      "min       1.000000    0.000000    1.000000    0.420000    0.000000   \n",
+      "25%     223.500000    0.000000    2.000000   20.125000    0.000000   \n",
+      "50%     446.000000    0.000000    3.000000   28.000000    0.000000   \n",
+      "75%     668.500000    1.000000    3.000000   38.000000    1.000000   \n",
+      "max     891.000000    1.000000    3.000000   80.000000    8.000000   \n",
+      "\n",
+      "            Parch        Fare  \n",
+      "count  891.000000  891.000000  \n",
+      "mean     0.381594   32.204208  \n",
+      "std      0.806057   49.693429  \n",
+      "min      0.000000    0.000000  \n",
+      "25%      0.000000    7.910400  \n",
+      "50%      0.000000   14.454200  \n",
+      "75%      0.000000   31.000000  \n",
+      "max      6.000000  512.329200  \n"
+     ]
+    }
+   ],
    "source": [
     "# Load Titanic dataset\n",
     "url = 'https://raw.githubusercontent.com/datasciencedojo/datasets/master/titanic.csv'\n",
@@ -1286,7 +1312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "id": "1151c347",
    "metadata": {},
    "outputs": [
@@ -1295,9 +1321,9 @@
      "output_type": "stream",
      "text": [
       "Embarked\n",
-      "Q     77\n",
-      "C    168\n",
       "S    644\n",
+      "C    168\n",
+      "Q     77\n",
       "Name: count, dtype: int64\n"
      ]
     }
@@ -1309,7 +1335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 69,
    "id": "7be1e3ea",
    "metadata": {},
    "outputs": [
@@ -1318,9 +1344,9 @@
      "output_type": "stream",
      "text": [
       "Pclass\n",
-      "2    184\n",
-      "1    216\n",
       "3    491\n",
+      "1    216\n",
+      "2    184\n",
       "Name: count, dtype: int64\n"
      ]
     }
@@ -1332,7 +1358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 70,
    "id": "cc8e928c",
    "metadata": {},
    "outputs": [
@@ -1351,7 +1377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 71,
    "id": "a6778bb5",
    "metadata": {},
    "outputs": [
@@ -1370,7 +1396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 72,
    "id": "26f7aae0",
    "metadata": {},
    "outputs": [
@@ -1389,7 +1415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 73,
    "id": "05c414e9",
    "metadata": {},
    "outputs": [
@@ -1411,7 +1437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 74,
    "id": "019e3c2b",
    "metadata": {},
    "outputs": [
@@ -1442,8 +1468,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 75,
    "id": "ff62d276",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Replace values in a single column\n",
+    "df['Sex'] = df['Sex'].map({'male': 'M', 'female': 'F'})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "id": "6e3d7e17",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Apply logic to a column\n",
+    "df['AgeGroup'] = df['Age'].apply(lambda x: 'Senior' if x >= 60 else 'Adult')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "id": "2c2bf5a6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\tm96\\AppData\\Local\\Temp\\ipykernel_26548\\3850233925.py:2: FutureWarning: DataFrame.applymap has been deprecated. Use DataFrame.map instead.\n",
+      "  df[['Name', 'Sex']] = df[['Name', 'Sex']].applymap(lambda x: x.capitalize())\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Capitalize all string entries in a DataFrame\n",
+    "df[['Name', 'Sex']] = df[['Name', 'Sex']].applymap(lambda x: x.capitalize())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "id": "8052618e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\tm96\\AppData\\Local\\Temp\\ipykernel_26548\\1226892057.py:8: FutureWarning: DataFrame.applymap has been deprecated. Use DataFrame.map instead.\n",
+      "  df[['Name', 'Sex']] = df[['Name', 'Sex']].applymap(lambda x: x.lower() if isinstance(x, str) else x)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 1. Use .map() to shorten gender labels\n",
+    "df['GenderCode'] = df['Sex'].map({'male': 'M', 'female': 'F'})\n",
+    "\n",
+    "# 2. Use .apply() to create an 'AgeGroup' column\n",
+    "df['AgeGroup'] = df['Age'].apply(lambda x: 'Child' if x < 18 else 'Adult')\n",
+    "\n",
+    "# 3. Use .applymap() to convert all string values to lowercase in selected columns\n",
+    "df[['Name', 'Sex']] = df[['Name', 'Sex']].applymap(lambda x: x.lower() if isinstance(x, str) else x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d1835770",
    "metadata": {},
    "outputs": [],
    "source": []
