dealing with nulls

--- a/Week_1/Data_Cleaning_with_Python.ipynb
+++ b/Week_1/Data_Cleaning_with_Python.ipynb
@@ -3317,12 +3317,205 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "3d55fdae",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "index",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "0",
+         "rawType": "float64",
+         "type": "float"
+        }
+       ],
+       "ref": "6a2fe548-bf0f-44ed-945e-ae39cf52e56e",
+       "rows": [
+        [
+         "hotel",
+         "0.0"
+        ],
+        [
+         "is_canceled",
+         "0.0"
+        ],
+        [
+         "lead_time",
+         "0.0"
+        ],
+        [
+         "arrival_date_year",
+         "0.0"
+        ],
+        [
+         "arrival_date_month",
+         "0.0"
+        ],
+        [
+         "arrival_date_week_number",
+         "0.0"
+        ],
+        [
+         "arrival_date_day_of_month",
+         "0.0"
+        ],
+        [
+         "stays_in_weekend_nights",
+         "0.0"
+        ],
+        [
+         "stays_in_week_nights",
+         "0.0"
+        ],
+        [
+         "num_adults",
+         "0.0"
+        ],
+        [
+         "num_children",
+         "0.0033503643521232934"
+        ],
+        [
+         "num_babies",
+         "0.0"
+        ],
+        [
+         "meal",
+         "0.0"
+        ],
+        [
+         "country",
+         "0.40874445095904177"
+        ],
+        [
+         "market_segment",
+         "0.0"
+        ],
+        [
+         "distribution_channel",
+         "0.0"
+        ],
+        [
+         "is_repeated_guest",
+         "0.0"
+        ],
+        [
+         "previous_cancellations",
+         "0.0"
+        ],
+        [
+         "previous_bookings_not_canceled",
+         "0.0"
+        ],
+        [
+         "reserved_room_type",
+         "0.0"
+        ],
+        [
+         "assigned_room_type",
+         "0.0"
+        ],
+        [
+         "booking_changes",
+         "0.0"
+        ],
+        [
+         "deposit_type",
+         "0.0"
+        ],
+        [
+         "agent",
+         "13.686238378423653"
+        ],
+        [
+         "company",
+         "94.30689337465449"
+        ],
+        [
+         "days_in_waiting_list",
+         "0.0"
+        ],
+        [
+         "customer_type",
+         "0.0"
+        ],
+        [
+         "adr",
+         "0.0"
+        ],
+        [
+         "required_car_parking_spaces",
+         "0.0"
+        ],
+        [
+         "total_of_special_requests",
+         "0.0"
+        ],
+        [
+         "reservation_status",
+         "0.0"
+        ],
+        [
+         "reservation_status_date",
+         "0.0"
+        ]
+       ],
+       "shape": {
+        "columns": 1,
+        "rows": 32
+       }
+      },
+      "text/plain": [
+       "hotel                              0.000000\n",
+       "is_canceled                        0.000000\n",
+       "lead_time                          0.000000\n",
+       "arrival_date_year                  0.000000\n",
+       "arrival_date_month                 0.000000\n",
+       "arrival_date_week_number           0.000000\n",
+       "arrival_date_day_of_month          0.000000\n",
+       "stays_in_weekend_nights            0.000000\n",
+       "stays_in_week_nights               0.000000\n",
+       "num_adults                         0.000000\n",
+       "num_children                       0.003350\n",
+       "num_babies                         0.000000\n",
+       "meal                               0.000000\n",
+       "country                            0.408744\n",
+       "market_segment                     0.000000\n",
+       "distribution_channel               0.000000\n",
+       "is_repeated_guest                  0.000000\n",
+       "previous_cancellations             0.000000\n",
+       "previous_bookings_not_canceled     0.000000\n",
+       "reserved_room_type                 0.000000\n",
+       "assigned_room_type                 0.000000\n",
+       "booking_changes                    0.000000\n",
+       "deposit_type                       0.000000\n",
+       "agent                             13.686238\n",
+       "company                           94.306893\n",
+       "days_in_waiting_list               0.000000\n",
+       "customer_type                      0.000000\n",
+       "adr                                0.000000\n",
+       "required_car_parking_spaces        0.000000\n",
+       "total_of_special_requests          0.000000\n",
+       "reservation_status                 0.000000\n",
+       "reservation_status_date            0.000000\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#NaNs"
+    "#NaNs\n",
+    "hotel_bookings.isnull().sum() * 100 / len(hotel_bookings)"
    ]
   },
   {
